<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
           
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >
    
    
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            

    <android.support.design.widget.TextInputLayout
        android:id="@+id/IrID"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorGreyText"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtIrId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IrId"
            android:textColor="@color/colorGreyText"
            android:textColorHint="@color/colorGreyText"
            android:textSize="@dimen/login_text_size" />
    </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txxifristname"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtfristname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fristname"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinnmiddlename"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtmiddlename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/middlename"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinlastname"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtlastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>





            <!--<<<<<<<datefile>>>>>>-->


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinemails"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtemails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinmobile"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtmoblie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobilenumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinpannumber"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtpannumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pannumber"
                    android:text="bnzpm2501f"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtaadharnuer"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edtaadharnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aadharnumber"
                    android:inputType="number"
                    android:maxLength="12"
                    android:text="732284402683"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinaddress1"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtaddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address1"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinaddress2"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtaddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address2"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>


            <!--<<<<<<<<Spinner place>>>>>>>>-->


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtincity"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtcity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/City"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtstate"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtstate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtpinnumber"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtpinnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pinnumber"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinfathername"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtfathername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fathername"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtmothername"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtmothername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mothername"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtmaritalstate"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorGreyText"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtmaritalsat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maritalstate"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/date"
                    android:id="@+id/txtdate"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/btn_login_txt_size"
                    android:layout_weight="0.1"
                    />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Geneder"
                android:textSize="@dimen/btn_login_txt_size"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:orientation="horizontal"
                >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:id="@+id/rdtMale"
                        android:layout_marginRight="10dp"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:id="@+id/rdtFemale"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Other"
                        android:id="@+id/rdtOther"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        />

            </RadioGroup>



            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:background="@color/background"
                android:text="@string/btn_register"
                />

        </LinearLayout>

        </ScrollView>



    </RelativeLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>