<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/edtnomineename"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_black"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size"
                    android:hint="@string/nomineename"
                    />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                >-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/txtdate"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/date"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/border_black"
                    android:textColor="@color/colorGreyText"
                    android:textColorHint="@color/colorGreyText"
                    android:textSize="@dimen/login_text_size"
                    />

                <!--<ImageButton
                    android:id="@+id/datepicker"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/calender" />-->

           <!-- </LinearLayout>-->




           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/txtrelation"
               android:text="@string/nomineerelation"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:textColor="@color/tabSelectedIconColor"
               android:textStyle="bold"
               android:layout_marginLeft="5dp"
               android:textColorHint="@color/colorGreyText"
               android:textSize="@dimen/login_text_size"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdgpnominee">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdspouce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nomineespouce" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdson"
                        android:text="@string/nomineeson"
                        />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rddaughter"
                        android:text="@string/nomineedaughter"
                        />

                </RadioGroup>

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdfather"
                        android:text="@string/nomineefather"
                        />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdmother"
                        android:text="@string/nomineemother"
                        />

                </RadioGroup>

                    </LinearLayout>

                    </RadioGroup>


                </LinearLayout>


            </LinearLayout>








        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnnext"
                android:text="@string/btnnext"
                android:textColor="@color/tabSelectedIconColor"
                android:background="@color/background"
                android:textAppearance="?android:textAppearanceMedium"
                />



        </RelativeLayout>






    </RelativeLayout>

</LinearLayout>